[tool.poetry]
name = "connections"
version = "0.1.0"
description = "flight to connections map"
authors = ["Lucas Messenger <1335960+layertwo@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"


[tool.poetry.scripts]
connections = "connections.main:render"


[tool.poetry.dependencies]
python = "^3.9"
pyairports = "^2.1.1"
plotly = "^5.18.0"
dataclasses-json = "^0.6.4"
geojson = "^3.1.0"
click = "^8.1.7"
setuptools = "^69.1.0"
kaleido = "0.2.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.0"
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line_length = 100


[tool.isort]
known_first_party = "connections"
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
combine_as_imports = false
skip = [".git", "venv"]
